@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-04
+2013-05-16 Andy Salnikov
+- do not always throw exception when experiment name or ID is not recognized
+
 Tag: V00-01-03
 2013-03-29 Andy Salnikov
 - fix typo in Dataset class comments
